Changes resulting from code inspection.